tests/Error/YS02xx/YS0220.ys
VAR = TRUE # expected an Identivier after the VAR keyword